fix: minor spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
 }
 
 .custom-rectangle {
-  clip-path: path("M7.07175 158.172C-19.0148 80.4252 38.8318 0 120.839 0H422C463.421 0 497 33.5786 497 75V217C497 258.421 463.421 292 422 292H123.901C80.9308 292 42.7643 264.549 29.0954 223.81L7.07175 158.172Z");
+  /* clip-path: path("M7.07175 158.172C-19.0148 80.4252 38.8318 0 120.839 0H422C463.421 0 497 33.5786 497 75V217C497 258.421 463.421 292 422 292H123.901C80.9308 292 42.7643 264.549 29.0954 223.81L7.07175 158.172Z"); */
+  border-radius: 225px 75px 75px 75px;
 }
 
 .newsletter-custom-leaf {
